--- a/FinalProject/Classifier.ipynb
+++ b/FinalProject/Classifier.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5341,68 +5341,205 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 136,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "one_row_df=pd.DataFrame(columns=['words_count', 'stopwords_count', 'words_pos_count','words_neg_count','words_curse_count','words_repeat_count'])\n",
+    "## Functions for predictable song:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Spotify API"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Valid Spotify token\n"
+     ]
+    }
+   ],
+   "source": [
+    "import spotipy\n",
+    "import spotipy.util as util\n",
+    "import sys\n",
+    "import datetime\n",
     "\n",
-    "\n"
+    "username = 'orenxx2'\n",
+    "client_id = '990dc70ab060436e8439dbbdcc5055e6'\n",
+    "client_secret = '86603c4b2ca24ddb84f05b63fbc713a0'\n",
+    "redirect_uri = 'http://localhost:8888/callback/'\n",
+    "scope = 'user-library-read'\n",
+    "\n",
+    "if len(sys.argv) > 1:\n",
+    "    username = sys.argv[1]\n",
+    "else:\n",
+    "    print(\"Usage: %s username\" % (sys.argv[0],))\n",
+    "    sys.exit()\n",
+    "\n",
+    "token = util.prompt_for_user_token(username, scope, client_id, client_secret, redirect_uri)\n",
+    "if token:\n",
+    "    sp = spotipy.Spotify(auth=token)\n",
+    "    results = sp.current_user_saved_tracks()\n",
+    "    print(\"Valid Spotify token\")\n",
+    "else:\n",
+    "    print(\"Can't get token for\", username)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# empty list, batchsize and the counter for None results\n",
+    "def getAudioFeatures(df):\n",
+    "    rows = []\n",
+    "    batchsize = 100\n",
+    "    None_counter = 0\n",
+    "\n",
+    "    for i in range(0,len(df['id']),batchsize):\n",
+    "        batch = df['id'][i:i+batchsize]\n",
+    "        feature_results = sp.audio_features(batch)\n",
+    "        for i, t in enumerate(feature_results):\n",
+    "            if t == None:\n",
+    "                None_counter = None_counter + 1\n",
+    "            else:\n",
+    "                rows.append(t)\n",
+    "    print('Done,\\nNumber of tracks where no audio features were available:',None_counter)\n",
+    "    return(rows)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def getSongData(track_uri):\n",
+    "    df = pd.DataFrame()\n",
+    "    tracks_info = sp.track(track_uri)\n",
+    "#     print(tracks_info)\n",
+    "#     print(\"\\n\\n\\n\")\n",
+    "\n",
+    "    df['Title'] = [tracks_info['name']]\n",
+    "    df['Artist'] = tracks_info['artists'][0]['name']\n",
+    "    df['id'] = tracks_info['id']\n",
+    "    \n",
+    "    temp_artist_id = tracks_info['artists'][0]['id']\n",
+    "    df['artist_genres'] = sp.artist(temp_artist_id).get('genres')\n",
+    "    df['is_single'] = tracks_info['album']['album_type']\n",
+    "    df['total_tracks'] = tracks_info['album']['total_tracks']\n",
+    "    \n",
+    "    temp_release = tracks_info['album']['release_date']\n",
+    "    df['release_date'] = temp_release\n",
+    "    \n",
+    "    temp_day = datetime.datetime.strptime(temp_release, '%Y-%m-%d').strftime('%A')\n",
+    "    if temp_day == 'Monday':\n",
+    "        temp_day = 1\n",
+    "    elif temp_day == 'Tuesday':\n",
+    "        temp_day = 2\n",
+    "    elif temp_day == 'Wednesday':\n",
+    "        temp_day = 3\n",
+    "    elif temp_day == 'Thursday':\n",
+    "        temp_day = 4\n",
+    "    elif temp_day == 'Friday':\n",
+    "        temp_day = 5\n",
+    "    elif temp_day == 'Saturday':\n",
+    "        temp_day = 6\n",
+    "    elif temp_day == 'Sunday':\n",
+    "        temp_day = 7\n",
+    "    df['day_of_week'] = temp_day\n",
+    "\n",
+    "    month = int(temp_release.split('-')[1])\n",
+    "    if month in [3,4,5]:\n",
+    "        month = 1\n",
+    "    elif month in [6,7,8]:\n",
+    "        month = 2\n",
+    "    elif month in [9,10,11]:\n",
+    "        month = 3\n",
+    "    elif month in [12,1,2]:\n",
+    "        month = 4\n",
+    "    df['release_season'] = month\n",
+    "    df['Year'] = int(temp_release.split('-')[0])\n",
+    "    \n",
+    "    return(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# get data on song\n",
+    "df_data = getSongData('spotify:track:5h0Jgt873QtgL6nJRBGfT6')\n",
+    "print(\"df_data shape is: {}\".format(df_data.shape))\n",
+    "\n",
+    "# get audio features of the song\n",
+    "rows = getAudioFeatures(df_data)\n",
+    "df_AF = pd.DataFrame.from_dict(rows, orient='columns')\n",
+    "print(\"df_AF shape is: {}\".format(df_AF.shape))\n",
+    "\n",
+    "# merge between the two dataframes\n",
+    "df_data_AF = pd.merge(df_data, df_AF, on='id', how='inner')\n",
+    "print(\"df_data_AF shape is: {}\".format(df_data_AF.shape))\n",
+    "\n",
+    "df_data_AF.drop(['analysis_url', 'track_href', 'type', 'uri'], axis=1,inplace=True)\n",
+    "print(\"df_data_AF shape is: {}\".format(df_data_AF.shape))\n",
+    "\n",
+    "df_data_AF.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Lyrics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "one_row_df=pd.DataFrame(columns=['words_count', 'stopwords_count', 'words_pos_count','words_neg_count',\n",
+    "                                 'words_curse_count','words_repeat_count'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5417,7 +5554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5425,12 +5562,13 @@
     "from nltk.stem import PorterStemmer\n",
     "from nltk.tokenize import sent_tokenize, word_tokenize\n",
     "from nltk.stem import WordNetLemmatizer \n",
-    "from nltk.corpus import stopwords, movie_reviews"
+    "from nltk.corpus import stopwords, movie_reviews\n",
+    "import re"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5444,7 +5582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5454,13 +5592,12 @@
     "    for word in tokens:\n",
     "        if word in stop_words:\n",
     "            count+=1\n",
-    "    return count\n",
-    "    "
+    "    return count "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5496,7 +5633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5529,7 +5666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5561,9 +5698,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-17-4e83e05d6107>, line 5)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-17-4e83e05d6107>\"\u001b[1;36m, line \u001b[1;32m5\u001b[0m\n\u001b[1;33m    def count_swear(lyrics_texts)\u001b[0m\n\u001b[1;37m                                 ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "count_swear=0\n",
     "\n",
@@ -5602,7 +5748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5620,9 +5766,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "UnboundLocalError",
+     "evalue": "local variable 'name' referenced before assignment",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mUnboundLocalError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-16-e234fe0f97f9>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0murl\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0msetLyricsUrl\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Love You Like a Love Song'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'Selena Gomez'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mlyrics\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mlyrics_txt\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0murl\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mcount_positive\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mcount_pos\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlyrics\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mcount_negative\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mcount_neg\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlyrics\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mcount_curse\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mcount_swear\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlyrics\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-5-dab227921f9e>\u001b[0m in \u001b[0;36msetLyricsUrl\u001b[1;34m(title, artist)\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0msetLyricsUrl\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtitle\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0martist\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m     \u001b[0mname\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreplace\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\" \"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m\"-\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m     \u001b[0murl\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'https://www.metrolyrics.com/'\u001b[0m\u001b[1;33m+\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;34m'-lyrics-'\u001b[0m\u001b[1;33m+\u001b[0m\u001b[0martist\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreplace\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\" \"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m\"-\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;34m'.html'\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mUnboundLocalError\u001b[0m: local variable 'name' referenced before assignment"
+     ]
+    }
+   ],
    "source": [
     "url=setLyricsUrl('Love You Like a Love Song','Selena Gomez')\n",
     "lyrics=lyrics_txt(url)\n",
@@ -5631,6 +5790,87 @@
     "count_curse=count_swear(lyrics)\n",
     "find_repeated_count(lyrics)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Alisa \n",
+    "# need to add the function that add Genre (single genre) column to the df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### and then run the following lines"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "set"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "set_genres = {'is_childrens-music', 'is_tropical-house', 'is_san-diego-rap', 'is_east-coast-hip-hop', 'is_indie-rock', 'is_chamber-pop', 'is_idol', 'is_pop-rap', 'is_latin', 'is_new-americana', 'is_canadian-pop', 'is_australian-pop', 'is_electro-house', 'is_canadian-singer-songwriter', 'is_indie-poptimism', 'is_neo-singer-songwriter', 'is_icelandic-rock', 'is_west-coast-trap', 'is_house', 'is_israeli-pop', 'is_escape-room', 'is_canadian-indie', 'is_atl-hip-hop', 'is_contemporary-country', 'is_minnesota-hip-hop', 'is_dmv-rap', 'is_girl-group', 'is_latin-hip-hop', 'is_electropop', 'is_emo', 'is_edm', 'is_latin-pop', 'is_modern-rock', 'is_swedish-gangsta-rap', 'is_country', 'is_chicago-rap', 'is_atl-trap', 'is_miami-hip-hop', 'is_philly-rap', 'is_viral-pop', 'is_g-funk', 'is_pinoy-hip-hop', 'is_post-teen-pop', 'is_hip-hop', 'is_country-road', 'is_rock', 'is_jewish-pop', 'is_melodic-rap', 'is_dance-pop', 'is_viral-trap', 'is_basshall', 'is_pittsburgh-rap', 'is_indie-soul', 'is_gangster-rap', 'is_acoustic-pop', 'is_australian-electropop', 'is_christian-alternative-rock', 'is_video-game-music', 'is_southern-hip-hop', 'is_australian-reggae-fusion', 'is_dirty-south-rap', 'is_complextro', 'is_pop', 'is_hollywood', 'is_neo-soul', 'is_new-orleans-rap', 'is_pop-rock', 'is_trap', 'is_reggaeton', 'is_r&b', 'is_hip-pop', 'is_uk-pop', 'is_lgbtq+-hip-hop', 'is_french-indie-pop', 'is_russian-hip-hop', 'is_rap', 'is_country-pop', 'is_funk-metal', 'is_la-pop', 'is_gaming-edm'}\n",
+    "type(set_genres)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(df.shape)\n",
+    "for i in set_genres:\n",
+    "    df['{}'.format(i)] = 0\n",
+    "print(df.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cur_genre = df['Genres']\n",
+    "cur_genre = cur_genre.replace('\"', '').lstrip().lstrip().replace(' ','-')\n",
+    "cur_genre = 'is_' + cur_genre\n",
+    "df['{}'.format()] = cur_genre"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -5914,7 +6154,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
