--- a/FinalProject/Classifier.ipynb
+++ b/FinalProject/Classifier.ipynb
@@ -74615,7 +74615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 900,
+   "execution_count": 928,
    "metadata": {},
    "outputs": [
     {
@@ -74632,9 +74632,9 @@
     "import sys\n",
     "import datetime\n",
     "\n",
-    "username = 'orenxx2'\n",
-    "client_id = '990dc70ab060436e8439dbbdcc5055e6'\n",
-    "client_secret = '86603c4b2ca24ddb84f05b63fbc713a0'\n",
+    "username = ''\n",
+    "client_id = ''\n",
+    "client_secret = ''\n",
     "redirect_uri = 'http://localhost:8888/callback/'\n",
     "scope = 'user-library-read'\n",
     "\n",
